# encapsulated-LTES

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE.txt  LICENSES-bundled.txt  README.md  noxfile.py  pyproject.toml
.github/: codecov.yaml
.github/workflows/: periodic_tests.yml  test_on_push.yml
data/: Nallusamy2007_HTF_0.25L.csv  Nallusamy2007_HTF_0.5L.csv  Nallusamy2007_HTF_0.75L.csv  Nallusamy2007_HTF_1L.csv  Nallusamy2007_PCM_0.25L.csv  Nallusamy2007_PCM_0.5L.csv  Nallusamy2007_PCM_0.75L.csv  Nallusamy2007_PCM_1L.csv
docs/: conf.py  index.md
examples/: mesh_refinement.py  validate_Nallusamy_et_al.ipynb
src/encapsulated_ltes/: __init__.py  entry_point.py  parameter_values.py  parameters.py  plot.py  utils.py
src/encapsulated_ltes/models/: __init__.py  base_LTES_model.py  full_model.py  reduced_model.py  reduced_model_old.py
src/encapsulated_ltes/models/input/: BasicReservoir.py
src/encapsulated_ltes/parameters/input/: Chen2020.py
tests/generated_project_tests/: test_entry_points.py
tests/user_tests/: test_package.py
